# INF573-View_Interpolation

./: README.md
basic-view-interpolation/: CMakeLists.txt  README.md  image.h  interpolation.cpp  interpolation.h  view_interpolation.py
basic-view-interpolation/images/: face01.tif
graph-cuts-linear-interpolation/: README.md  geometry.py  view_interpolation.py
graph-cuts-linear-interpolation/images/: face00.tif
graph-cuts-linear-interpolation/results/: dispArray.npy
